class Task:
    def __init__(self, task_id: str, title: str, is_completed: bool):
        self.task_id = task_id
        self.title = title
        self.is_completed = is_completed