class User:
    def __init__(self, user_id: str):
        self.user_id = user_id